--- a/PA1_template.Rmd
+++ b/PA1_template.Rmd
@@ -8,7 +8,8 @@ output:
 
 ```{r global_options, include=FALSE}
 library(knitr)
-opts_chunk$set(echo=TRUE)
+library(ggplot2)
+opts_chunk$set(echo=TRUE,fig.width=12, fig.height=8)
 ```
 
 
@@ -19,8 +20,16 @@ activity <- read.csv('./activity/activity.csv')
 
 
 ## What is mean total number of steps taken per day?
-
-
+```{r}
+# Calculate total number of steps per day
+total_steps <- tapply(activity$steps,activity$date,sum)
+# Plot the histrogram
+qplot(total_steps, geom="histogram")
+# Calculate and report the mean and median 
+mean.steps <- mean(total_steps, na.rm = TRUE)
+median.steps <- median(total_steps, na.rm = TRUE)
+```
+The mean of total number of steps taken per day is `r mean.steps`. The meadian of total number of steps taken per day is `r median.steps`
 
 ## What is the average daily activity pattern?
 
